# fpgas.online-test-designs

./: .gitignore  .gitmodules  Makefile  README.md  plan.md  pyproject.toml  verify_hardware.py
.github/workflows/: build-ddr-test.yml  build-spiflash-test.yml  build-uart-test.yml  collect-bitstreams.yml  ethernet-test-build.yml  lint.yml  pcie-enumeration-build.yml  pmod-loopback-build.yml  pmod-pin-id-build.yml
designs/: README.md
designs/_host/: README.md  tt_fpga_program.py  tt_pmod_wrapper.py  tt_test_wrapper.py
designs/_shared/: README.md  __init__.py  build_helpers.py  fasm2frames_wrapper.py  fomu_crg.py  ice40_firmware.py  ice40_spi_flash.py  migen_compat.py  patch_fasm_gtp.py  patch_gtp_sitetype.py  platform_fixups.py  s7_spi_flash.py  tt_fpga_crg.py  tt_fpga_platform.py  tt_fpga_program.py  tt_pmod_wrapper.py  tt_test_wrapper.py  yosys_workarounds.py
designs/ddr-memory/: Makefile  README.md
designs/ddr-memory/gateware/: common.py  ddr_soc_acorn.py  ddr_soc_arty.py  ddr_soc_netv2.py
designs/ddr-memory/host/: test_ddr.py
designs/ethernet-test/: Makefile  README.md  pyproject.toml
designs/ethernet-test/gateware/: _migen_compat.py  _toolchain_fixups.py  ethernet_soc_arty.py  ethernet_soc_netv2.py
designs/ethernet-test/host/: test_ethernet.py
designs/pcie-enumeration/: Makefile  README.md  pyproject.toml
designs/pcie-enumeration/gateware/: pcie_soc_acorn.py  pcie_soc_netv2.py
designs/pcie-enumeration/host/: test_pcie_enumeration.py
designs/pcie-enumeration/openocd/: alphamax-rpi.cfg  alphamax-rpi5-sysfsgpio.cfg
designs/pmod-loopback/: Makefile  README.md  pyproject.toml
designs/pmod-loopback/firmware/: main.c
designs/pmod-loopback/gateware/: gpio_loopback_acorn.py  gpio_loopback_arty.py  gpio_loopback_fomu.py  gpio_loopback_netv2.py  gpio_loopback_tt.py  migen_compat.py  pmod_loopback_soc.py
designs/pmod-loopback/host/: test_pmod_loopback.py
designs/pmod-pin-id/: Makefile  README.md
designs/pmod-pin-id/gateware/: pmod_pin_id.py  pmod_pin_id_acorn.py  pmod_pin_id_arty.py  pmod_pin_id_fomu.py  pmod_pin_id_netv2.py  pmod_pin_id_tt.py
designs/pmod-pin-id/host/: identify_pmod_pins.py
designs/spi-flash-id/: Makefile  README.md
designs/spi-flash-id/firmware/: Makefile  main.c
designs/spi-flash-id/gateware/: common.py  spiflash_soc_acorn.py  spiflash_soc_arty.py  spiflash_soc_fomu.py  spiflash_soc_netv2.py  spiflash_soc_tt.py
designs/spi-flash-id/host/: test_spiflash.py
designs/uart/: Makefile  README.md
designs/uart/gateware/: common.py  uart_soc_acorn.py  uart_soc_arty.py  uart_soc_fomu.py  uart_soc_netv2.py  uart_soc_tt.py
designs/uart/host/: test_uart.py
docs/: resources.md  verify-hardware.md
docs/hardware/: Makefile  README.md  acorn-cle215-pinmap.md  acorn-cle215.md  acorn-pcie-programming.md  acorn-pinmap.md  acorn-wiring-guide.md  acorn.md  arty-a7-pin-mapping.md  arty-a7.md  arty-pin-mapping.md  butterstick.md  deployment-checklist.md  fomu-evt.md  fomu-pin-mapping.md  gpio-connectivity-analysis.md  infrastructure.md  netv2-pin-mapping.md  netv2.md  pmod-hat.md  pmod-tt.md  pmod.md  rpi-hat-pmod.md  site-ps1-pibs.conf  site-ps1.md  site-welland-pibs.conf  site-welland.md  tt-fpga-pin-mapping.md  tt-fpga.md  ulx3s.md
docs/plans/: 2026-03-09-ddr-memory-test.md  2026-03-09-ethernet-test.md  2026-03-09-pcie-enumeration-test.md  2026-03-09-pmod-loopback-test.md  2026-03-09-spi-flash-id-test.md  2026-03-09-uart-test.md
docs/tests/: README.md  ddr-memory.md  ethernet.md  pcie-enumeration.md  pmod-loopback.md  spi-flash-id.md  uart.md
docs/toolchains/: github-actions.md  openxc7.md  yosys-nextpnr-ecp5.md  yosys-nextpnr-ice40.md
mk/: common.mk
scripts/: setup_toolchains.py
tmp/: diag_bram.py  diag_pll.py
