[project]
name = "fpgas-online-test-designs"
version = "0.1.0"
description = "Automated FPGA hardware verification test designs for fpgas.online"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
# LiteX SoC builder and peripheral cores (needed to build gateware)
build = [
    "litex @ git+https://github.com/enjoy-digital/litex.git",
    "litex-boards @ git+https://github.com/litex-hub/litex-boards.git",
    "migen @ git+https://github.com/m-labs/migen.git",
    "pythondata-cpu-vexriscv @ git+https://github.com/litex-hub/pythondata-cpu-vexriscv.git",
    "pythondata-software-compiler-rt @ git+https://github.com/litex-hub/pythondata-software-compiler_rt.git",
    "pythondata-software-picolibc @ git+https://github.com/litex-hub/pythondata-software-picolibc.git",
]
# Host-side test dependencies
test = [
    "pyserial>=3.5",
    "gpiod>=2.0",
]
# Development tools
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["designs"]
