[project]
name = "fpgas-online-test-designs"
version = "0.1.0"
description = "Automated FPGA hardware verification test designs for fpgas.online"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
# LiteX SoC builder and peripheral cores (needed to build gateware)
build = [
    "meson>=1.0",
    "ninja",
    "litex @ git+https://github.com/enjoy-digital/litex.git",
    "litex-boards @ git+https://github.com/litex-hub/litex-boards.git",
    "migen @ git+https://github.com/m-labs/migen.git",
    "litedram @ git+https://github.com/enjoy-digital/litedram.git",
    "liteeth @ git+https://github.com/enjoy-digital/liteeth.git",
    "litepcie @ git+https://github.com/enjoy-digital/litepcie.git",
    "litespi @ git+https://github.com/litex-hub/litespi.git",
    "litescope @ git+https://github.com/enjoy-digital/litescope.git",
    "pythondata-cpu-vexriscv @ git+https://github.com/litex-hub/pythondata-cpu-vexriscv.git",
    "pythondata-software-compiler-rt @ git+https://github.com/litex-hub/pythondata-software-compiler_rt.git",
    "pythondata-software-picolibc @ git+https://github.com/litex-hub/pythondata-software-picolibc.git",
]
# Host-side test dependencies
test = [
    "gpiod>=2.0",
]
# Development tools
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["designs"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# LiteX/migen gateware code requires monkey-patching before imports and uses
# wildcard imports by convention. These are intentional patterns, not bugs.
"designs/*/gateware/*.py" = ["E402", "F403", "F405"]
"designs/_shared/*.py" = ["E402", "F403", "F405"]
# test_uart.py runs on rpi3-netv2 (Python 3.5) — must use .format() not f-strings.
"designs/uart/host/test_uart.py" = ["UP032"]

[tool.ruff.lint.isort]
known-first-party = ["designs"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.uv]
# Pin migen to git main for Python 3.12+ bytecode tracer compatibility.
override-dependencies = [
    "migen @ git+https://github.com/m-labs/migen.git",
    "litex @ git+https://github.com/enjoy-digital/litex.git",
    "litex-boards @ git+https://github.com/litex-hub/litex-boards.git",
    "litedram @ git+https://github.com/enjoy-digital/litedram.git",
    "liteeth @ git+https://github.com/enjoy-digital/liteeth.git",
    "litepcie @ git+https://github.com/enjoy-digital/litepcie.git",
    "litespi @ git+https://github.com/litex-hub/litespi.git",
    "litescope @ git+https://github.com/enjoy-digital/litescope.git",
    "pythondata-cpu-vexriscv @ git+https://github.com/litex-hub/pythondata-cpu-vexriscv.git",
    "pythondata-software-picolibc @ git+https://github.com/litex-hub/pythondata-software-picolibc.git",
    "pythondata-software-compiler_rt @ git+https://github.com/litex-hub/pythondata-software-compiler_rt.git",
]
