[project]
name = "pcie-enumeration-test"
version = "0.1.0"
description = "PCIe enumeration test for NeTV2 on RPi5"
requires-python = ">=3.9"
dependencies = [
    "litex==2023.12",
    "litex-boards==2023.12",
    "litedram==2023.12",
    "litepcie==2023.12",
    "migen @ git+https://github.com/m-labs/migen.git",
    "pythondata-cpu-vexriscv @ git+https://github.com/litex-hub/pythondata-cpu-vexriscv.git",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
